fix z-index for middle slider

--- a/style.css
+++ b/style.css
@@ -700,6 +700,7 @@ ul#main-nav li.vendors span.icon {
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index: 10;
 }
 
 /** Carousel **/
